charts/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: chatgpt.png
    gethomepage.dev/name: ChatGPT
    gethomepage.dev/app: open-webui
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - chatgpt.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: openweb-ui-open-webui
      namespace: open-webui
      port: 80
